Modificación en el diseño

--- a/proyectofinal/static/css/templatemo-style.css
+++ b/proyectofinal/static/css/templatemo-style.css
@@ -234,9 +234,9 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .custom-navbar .section-btn:hover {
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #6d047bf5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffffff, #6d047bf5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffffff, #6d047bf5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 
   .custom-navbar .section-btn a {
@@ -281,7 +281,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .custom-navbar .navbar-toggle .icon-bar {
-    background: #252525;
+    background: #6d047bf5;
     border-color: transparent;
   }
 
@@ -300,7 +300,7 @@ http://www.templatemo.com/tm-509-hydro
     }
 
     .top-nav-collapse .navbar-brand {
-      color: #252525;
+      color: #6d047bf5;
     }
 
     .top-nav-collapse .nav li a {
@@ -636,11 +636,27 @@ http://www.templatemo.com/tm-509-hydro
     background: #00F260;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right,  #6d047bf5, #ffffff);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right,  #6d047bf5, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    position: 160;
+  
+  }
+  
+  
+
+  #contact .section-title h2 {
+    color: #ffffff;
   }
 
-  #section-title h2 {
-    color: #ffffff;
+  .google-map {
+    border-radius: 100%;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .google-map iframe {
+    border: 0;
+    width: 300px;
+    height: 300px;
   }
 
   #contact .form-control {
@@ -652,9 +668,8 @@ http://www.templatemo.com/tm-509-hydro
     font-weight: normal;
     margin-bottom: 15px;
     padding-left: 8px;
-    
-  }
 
+  }
 
   #contact input,
   #contact select {
@@ -679,9 +694,7 @@ http://www.templatemo.com/tm-509-hydro
   -----------------------------------------*/
 
   footer {
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #6d047bf5;  /* fallback for old browsers */
     position: relative;
     padding-top: 80px;
     padding-bottom: 60px;
@@ -785,8 +798,8 @@ http://www.templatemo.com/tm-509-hydro
 
   .modal-dialog .modal-content {
     background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #434343, #6d047bf5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #6d047bf5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border: none;
     border-radius: 2px;
     text-align: center;
@@ -1045,3 +1058,4 @@ http://www.templatemo.com/tm-509-hydro
     }
     
   }
+
