--- a/proyectofinal/templates/quiz/admin_category.html
+++ b/proyectofinal/templates/quiz/admin_category.html
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: linear-gradient(180deg, #04868f, #ffffff);
+        background: linear-gradient(180deg, #6418a2, #ffffff);
       }
   
       .bg-c-green {
-        background: linear-gradient(180deg, #4C51BF, #ffffff);
+        background: linear-gradient(180deg, #b24cbf, #ffffff);
       }
   
       .bg-c-yellow {
@@ -67,13 +67,17 @@
       left: 0px;
       right: 0px;
     }
+    .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
     </style>
   </head>
 <br><br>
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-xl-6">
+    <div class="row center-block">
+      <div class="col-md-6">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
             <h6 class="m-b-20"> <a href="admin-add-category" style="text-decoration: none;color:white;">Añadir categoría</a> </h6>
@@ -83,7 +87,7 @@
         </div>
       </div>
   
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-6 ">
         <div class="card bg-c-green order-card">
           <div class="card-block">
             <h6 class="m-b-20"><a href="admin-view-category" style="text-decoration: none;color:white;">Ver categorías</a> </h6>
