--- a/proyectofinal/templates/quiz/admin_view_user.html
+++ b/proyectofinal/templates/quiz/admin_view_user.html
@@ -6,7 +6,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+  
   <style media="screen">
     a:link {
       text-decoration: none;
@@ -29,11 +29,33 @@
     th, tr {
       text-align: center;
     }
+    #panel2{
+      background: #6d047bf5;
+      color: white;
+      font-family:  "Poppins", sans-serif;
+    }
+    #panel{
+      border-color: #6d047bf5;
+      
+    }
+    .home-section{
+      background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  @media screen and (max-width: 1056px) {
+     table {
+       display: block;
+       overflow-x: auto;
+     }
+} 
+.panel-title{
+  font-family:  "Poppins", sans-serif !important;
+}
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel" id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Usuarios</h6>
     </div>
