--- a/proyectofinal/templates/quiz/index.html
+++ b/proyectofinal/templates/quiz/index.html
@@ -232,7 +232,7 @@ http://www.templatemo.com/tm-509-hydro
      </section>
 
      <!-- CONTACT -->
-     <section id="contact" data-stellar-background-ratio="0.5">
+     <section id="contact" data-stellar-background-ratio="0.5 ">
           <div class="container">
                <div class="row">
 
@@ -242,11 +242,10 @@ http://www.templatemo.com/tm-509-hydro
                               <span class="line-bar">...</span>
                          </div>
                     </div>
-
-                    <div class="col-md-8 col-sm-8" >
+                    <div >
                         
                          <!-- CONTACT FORM HERE -->
-                         <form id="contact-form" role="form" action="#" method="post" style="position: relative !important; left: 195px;">
+                         <form id="contact-form" role="form" action="#" method="post" style="position: relative !important; margin-left: 15%; margin-right: 15%;">
                               <div class="col-md-6 col-sm-6">
                                    <input type="text" class="form-control" placeholder="Tu nombre completo" id="cf-name" name="cf-name" required="">
                               </div>
@@ -258,10 +257,10 @@ http://www.templatemo.com/tm-509-hydro
                               <div class="col-md-12 col-sm-12">
                                    <textarea class="form-control" rows="6" placeholder="Tu comentario" id="cf-message" name="cf-message" required=""></textarea>
                               </div>
-
-                              <div class="col-md-4 col-sm-12">
-                                   <input type="submit" class="form-control" name="submit" value="Enviar mensaje" style="position: relative !important; left: 110%;">
-                              </div>
+                              <div class="col-sm-12">
+                              <div >
+                                   <input type="submit" class="form-control" name="submit" value="Enviar mensaje" style="position: relative !important; margin-left: 35%; margin-right: 35%; width: 30%;">
+                              </div></div>
 
                          </form>
                     </div>
@@ -281,37 +280,42 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-5 col-sm-12">
                          <div class="footer-thumb footer-info"> 
                               <h2>Yunou</h2>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <p style="text-align: justify;"><b>Yunou,</b> 
+                                   es una aplicación de tipo cuestionario, desarrollada en 2021. Las preguntas están totalmente
+                                   relacionadas a sucesos en la provincia del Chaco; podrían ser parte de las siguientes categorías: geografía,
+                                   historia, deportes, arte, cultura, etc.
+                              </p>
                          </div>
                     </div>
 
                     <div class="col-md-2 col-sm-4"> 
                          <div class="footer-thumb"> 
-                              <h2>Company</h2>
+                              <h2>Webs</h2>
                               <ul class="footer-link">
-                                   <li><a href="#">About Us</a></li>
-                                   <li><a href="#">Join our team</a></li>
-                                   <li><a href="#">Read Blog</a></li>
-                                   <li><a href="#">Press</a></li>
+                                   <li><a href="https://github.com/Syferk/trabajofinal" target="_blank">Nuestro repositorio</a></li>
+                                   <li><a href="https://empleo.chaco.gob.ar" target="_blank">Empleo Chaco</a></li>
+                                   <li><a href="https://empleo.chaco.gob.ar/cenit/#/" target="_blank">Informatorio</a></li>
                               </ul>
                          </div>
                     </div>
 
                     <div class="col-md-2 col-sm-4"> 
                          <div class="footer-thumb"> 
-                              <h2>Services</h2>
-                              <ul class="footer-link">
-                                   <li><a href="#">Pricing</a></li>
-                                   <li><a href="#">Documentation</a></li>
-                                   <li><a href="#">Support</a></li>
-                              </ul>
+                              <h2>Ubicanos en</h2>
+                              <p>Pcia. Roque Sáenz Peña, <br>Resistencia, <br>Chaco.</p>
                          </div>
                     </div>
 
                     <div class="col-md-3 col-sm-4"> 
                          <div class="footer-thumb"> 
-                              <h2>Find us</h2>
-                              <p>123 Grand Rama IX, <br> Krung Thep Maha Nakhon 10400</p>
+                              <h2>Roles</h2>
+                              <ul class="footer-link">
+                                   <li style="color: rgb(155, 145, 145);"><b>Develop backend:</b> <br><a href="#">Delgado, Juan</a></li>
+                                   <li><a href="#">Paz, Fernando</a></li>
+                                   <li style="color: rgb(155, 145, 145);"><b>Design frontend:</b> <br><a href="#">Acevedo, Iara</a></li>
+                                   <li><a href="#">Perelli, Fabricio</a></li>
+                                   <li><a href="#">Robeff, Santiago</a></li>
+                              </ul>
                          </div>
                     </div>                    
 
@@ -327,8 +331,8 @@ http://www.templatemo.com/tm-509-hydro
                                         <p>Contáctanos <span>(+54) 15 3644574458</span></p>
                                    </div>
                                    <ul class="social-icon">
-                                        <li><a href="https://www.facebook.com/templatemo" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                        <li><a href="#" class="fa fa-twitter"></a></li>
+                                        <li><a href="https://www.facebook.com/FernaPazz/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                        <li><a href="https://twitter.com/Syferssj" class="fa fa-twitter"></a></li>
                                         <li><a href="#" class="fa fa-instagram"></a></li>
                                    </ul>
                               </div>
