--- a/proyectofinal/templates/quiz/admin_check_marks.html
+++ b/proyectofinal/templates/quiz/admin_check_marks.html
@@ -19,20 +19,28 @@
     .row {
       margin: 100px;
     }
-    #panel2{
-      background: #2f323a;
+    .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  #panel2{
+      background: #6d047bf5;
     }
     #panel{
-      border-color: #2f323a;
+      border-color: #6d047bf5;
     }
     th, tr {
       text-align: center;
+    }
+    .panel-title{
+      font-family: "Poppins", sans-serif;
+      color: white;
     }
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel " id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Ver resultados</h6>
     </div>
