--- a/proyectofinal/templates/quiz/admin_view_category.html
+++ b/proyectofinal/templates/quiz/admin_view_category.html
@@ -20,19 +20,33 @@
       margin: 100px;
     }
     #panel2{
-      background: #2f323a;
+      background: #6d047bf5;
+      color: white;
     }
     #panel{
-      border-color: #2f323a;
+      border-color: #6d047bf5;
     }
     th, tr {
       text-align: center;
     }
+    .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  @media screen and (max-width: 700px) {
+     table {
+       display: block;
+       overflow-x: auto;
+     }
+} 
+.panel-title{
+  font-family:  "Poppins", sans-serif !important;
+}
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel" id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Categorías</h6>
     </div>
