--- a/proyectofinal/templates/quiz/admin_view_question.html
+++ b/proyectofinal/templates/quiz/admin_view_question.html
@@ -6,6 +6,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  
 
   <style media="screen">
     a:link {
@@ -21,25 +22,35 @@
     }
     #panel2{
       background: #6d047bf5;
+      color: white;
+     
     }
     #panel{
       border-color: #6d047bf5;
+    
     }
     th, tr {
       text-align: center;
     }
-
     .home-section{
     background: #00F260;
     background: linear-gradient(#6d047bf5, #ffffff);
   }
-  
+  @media screen and (max-width: 650px) {
+     table {
+       display: block;
+       overflow-x: auto;
+     }
+} 
+.panel-title{
+  font-family:  "Poppins", sans-serif !important;
+}
   </style>
 </head>
 <body>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel" id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Seleccione la categoría para ver las preguntas</h6>
     </div>
@@ -65,5 +76,5 @@
   </div>
 </div>
 
-<br><br><br><br><br><br></body>
+<br><br><br></body>
 {% endblock content %}
