--- a/proyectofinal/templates/quiz/admin_view_user_marks.html
+++ b/proyectofinal/templates/quiz/admin_view_user_marks.html
@@ -3,6 +3,7 @@
 {%load static%}
 
 <head>
+  
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -19,20 +20,36 @@
     .row {
       margin: 100px;
     }
-    #panel2{
-      background: #2f323a;
-    }
-    #panel{
-      border-color: #2f323a;
-    }
+   
     th, tr {
       text-align: center;
     }
+
+    #panel2{
+      background: #6d047bf5;
+    }
+    #panel{
+      border-color: #6d047bf5;
+    }
+    .home-section{
+      background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  .panel-heading {
+      background-color: #6d047bf5;
+      color: white;
+     
+    }
+    #panel{
+      border-color: #6d047bf5;
+    }
+    .panel-title{ 
+      font-family:  "Poppins", sans-serif;}
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel " id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Usuarios</h6>
     </div>
