--- a/proyectofinal/templates/quiz/admin_view_users_statistics.html
+++ b/proyectofinal/templates/quiz/admin_view_users_statistics.html
@@ -14,30 +14,39 @@
 
     h6 {
       text-align: center;
-      
     }
 
     .row {
       margin: 100px;
     }
-    #panel2{
-      background: #2f323a;
-    }
-    #panel{
-      border-color: #2f323a;
-    }
+    
     th, tr {
       text-align: center;
     }
+    .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  .panel-heading {
+      background-color: #6d047bf5;
+      color: white;
+     
+    }
+    #panel{
+      border-color: #6d047bf5;
+    }
+    .panel-title{ 
+      font-family:  "Poppins", sans-serif;}
+
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel" id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Usuarios</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <table class="table table-hover " id="dev-table">
       <thead>
         <tr>
             <th>Partidas jugadas</th>
