--- a/proyectofinal/templates/quiz/update_user.html
+++ b/proyectofinal/templates/quiz/update_user.html
@@ -2,64 +2,99 @@
 {% load widget_tweaks %}
 {% block content %}
 <head>
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
   <style media="screen">
-    input[type=text], select,input[type=number] ,input[type=password], textarea{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+             h1{
+ text-align: center; 
+ font-family: "Poppins", sans-serif !important;} 
+.home-section{
+background: #00F260;
+background: linear-gradient(#6d047bf5, #ffffff);
+
   }
+ 
 
-  input[type=submit] {
-    width: 100%;
-    background-color: #000;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  input[type=submit]:hover {
-    background-color: #2f323a;
-  }
-
-
+#id_first_name, #id_last_name, #id_mobile, #id_address, #id_username, #id_password, #id_profile_pic{
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
+  border-color: rgb(236, 236, 236);
+  border-width: 2px;
+}
+#btn-act{
+  
+  color: white ;
+  background-color: #6d047bf5;
+  border-radius: 20px;
+  border-color: rgb(255, 255, 255);
+  border-width: 1px;
+}
+#btnact{
+  width: auto;
+  text-align: center ;
+}
+.box {
+display:block;
+padding: 20px;
+width: 70%;
+margin: auto;
+border-radius: 20px;
+    background: #ffffff;
+    opacity: 70%;
+    color: #6d047bf5;
+    font-family: "Poppins", sans-serif !important;
+}
+#titulosp{
+  margin-left: 7px;
+}
   </style>
 
 
 </head>
 
-<br><br>
-<h3 style="text-align:center;">ACTUALIZAR USUARIO</h3>
-<div>
-  <form method="post" autocomplete="off" enctype="multipart/form-data" style="margin-left:200px;margin-right:200px;">
-      {% csrf_token %}
-        <label for="first_name">Nombre/s</label>
-        {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
-        <label for="last_name">Apellido</label>
-        {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
-          <label for="mobile">Teléfono</label>
-          {% render_field studentForm.mobile class="form-control" placeholder="Mobile" %}
-            <label for="address">Dirección</label>
-          {% render_field studentForm.address class="form-control" placeholder="Address" %}
-          
-        <label for="username">Nombre de usuario</label>
-        {% render_field userForm.username class="form-control" placeholder="Username" %}
-          <label for="password">Contraseña</label>
-        {% render_field userForm.password class="form-control" placeholder="Password" %} <br><br>
-        <label for="profile_pic">Foto de perfil</label>
-          {% render_field studentForm.profile_pic class="form-control" placeholder="Profile Picture" %}
-<br><br>
-    <input type="submit" value="Actualizar">
-  </form>
+<div class="box">
+  <h1>Actualizar usuario</h1>
+  <hr>
+  <div class="card-panel">
+      <form method="post" autocomplete="off" enctype="multipart/form-data" style="margin-left:200px;margin-right:200px;">
+          {% csrf_token %}
+          <div class="form-row">
+            <div class="form-group col-md-6">
+            <label for="first_name" id="titulosp">Nombre/s</label>
+            {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
+            </div>
+            <div class="form-group col-md-6">
+            <label for="last_name" id="titulosp">Apellido</label>
+            {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
+          </div>
+          <div class="form-group col-md-6">
+              <label for="mobile" id="titulosp">Teléfono</label>
+              {% render_field studentForm.mobile class="form-control" placeholder="Mobile" %}
+            </div>
+            <div class="form-group col-md-6">
+                <label for="address" id="titulosp">Dirección</label>
+              {% render_field studentForm.address class="form-control" placeholder="Address" %}
+            </div>
+            <div class="form-group col-md-6">
+            <label for="username" id="titulosp">Nombre de usuario</label>
+            {% render_field userForm.username class="form-control" placeholder="Username" %}
+          </div>
+          <div class="form-group col-md-6">
+              <label for="password" id="titulosp">Contraseña</label>
+            {% render_field userForm.password class="form-control" placeholder="Password" %}
+          </div> </div>
+            <div  style="text-align: center;"><label for="profile_pic" >Foto de perfil</label>
+              {% render_field studentForm.profile_pic class="form-control" placeholder="Foto de perfil" %}
+            </div><br>
+    <div id="btnact">
+        <input id="btn-act" class="btn btn-primary" type="submit" value="Actualizar"></div>
+      </form>
+  </div>
 </div>
 
 
 
-<br><br><br><br><br><br><br><br>
+<br><br>
 {% endblock content %}
