--- a/proyectofinal/templates/quiz/view_question.html
+++ b/proyectofinal/templates/quiz/view_question.html
@@ -18,21 +18,39 @@
 
     .row {
       margin: 100px;
+
     }
     #panel2{
-      background: #2f323a;
+      background: #6d047bf5;
     }
     #panel{
-      border-color: #2f323a;
+      border-color:#6d047bf5;
+      color: white; 
     }
+    .home-section{
+background: #00F260;
+background: linear-gradient(#6d047bf5, #ffffff);
+  }
     th, tr {
       text-align: center;
     }
+    .table{
+      color:black;
+    }
+    @media screen and (max-width: 650px) {
+     table {
+       display: block;
+       overflow-x: auto;
+     }
+} 
+.panel-title{
+  font-family:  "Poppins", sans-serif !important;
+}
   </style>
 </head>
 <br><br>
 <div class="container">
-  <div class="panel panel-primary" id="panel">
+  <div class="panel " id="panel">
     <div class="panel-heading" id="panel2">
       <h6 class="panel-title">Preguntas</h6>
     </div>
@@ -41,16 +59,18 @@
         <tr>
 
           <th>Pregunta</th>
-
+         
+          <th>Puntaje</th>
           <th>Actualizar pregunta</th>
           <th>Eliminar pregunta</th>
-
         </tr>
       </thead>
       {% for c in questions %}
       <tr>
 
         <td> {{c.question}}</td>
+        
+        <td>{{c.marks}}</td>
 
         <td><a class="btn btn-primary btn-xs" href="{% url 'update-question' c.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
         <td><a class="btn btn-danger btn-xs" href="{% url 'delete-question' c.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
