--- a/proyectofinal/templates/user/ranking.html
+++ b/proyectofinal/templates/user/ranking.html
@@ -1,56 +1,76 @@
 {% extends 'user/userbase.html' %}
 {% block content %}
 {% load static %}
-<head>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  
-    <style media="screen">
-      a:link {
-        text-decoration: none;
-      }
-  
-      h6 {
-        text-align: center;
-      }
-  
-      .row {
-        margin: 100px;
-      }
-      #panel2{
-        background: #2f323a;
-      }
-      #panel{
-        border-color: #2f323a;
-      }
 
-      th, tr {
-        text-align: center;
+<head>
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+  <style media="screen">
+    a:link {
+      text-decoration: none;
+    }
+
+    h6 {
+      text-align: center;
+    }
+
+    .row {
+      margin: 100px;
+    }
+
+    .panel-heading {
+      background-color: #6d047bf5;
+      color: white;
+    }
+
+    .panel {
+      border: 1px #6d047bf5;
+    }
+
+    .home-section {
+      background: #00f260;
+      background: linear-gradient(#6d047bf5, #ffffff);
+    }
+
+    th,
+    tr {
+      text-align: center;
+    }
+
+    @media screen and (max-width: 320px) {
+      table {
+        display: block;
+        overflow-x: auto;
       }
-    </style>
-  
+    }
+
+    .panel-title {
+      font-family: "Poppins", sans-serif !important;
+    }
+  </style>
 </head>
-    <div class="container">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h6 class="panel-title">Ranking</h6>
-          </div>
-          <table class="table table-hover" id="dev-table">
-            <thead>
-              <tr>          
-                <th>Usuario</th>
-                <th>Puntaje total</th>
-              </tr>
-            </thead>
-            {% for l in lista %}
-              <tr>
-              {% for key, value in l.items %}
-                <td>{{value}}</td>
-              {% endfor %}
-              </tr>
-            {% endfor %}
-          </table>
-        </div>
-      </div>
+<div class="container">
+  <div class="panel">
+    <div class="panel-heading">
+      <h6 class="panel-title">Ranking</h6>
+    </div>
+    <table class="table table-hover" id="dev-table">
+      <thead>
+        <tr>
+          <th>Usuario</th>
+          <th>Puntaje total</th>
+        </tr>
+      </thead>
+      {% for l in lista %}
+      <tr>
+        {% for key, value in l.items %}
+        <td>{{value}}</td>
+        {% endfor %}
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+</div>
 {% endblock %}
