--- a/proyectofinal/templates/user/statistics.html
+++ b/proyectofinal/templates/user/statistics.html
@@ -1,66 +1,66 @@
 {% extends 'user/userbase.html' %}
 {% block content %}
 {% load static %}
+
 <head>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  
-    <style media="screen">
-      a:link {
-        text-decoration: none;
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <style>
+    .panel-heading {
+      color: white;
+      text-align: center;
+      background: #6d047bf5;
+    }
+
+    .panel {
+      border-color: #6d047bf5;
+    }
+
+    .home-section,
+    body {
+      background: #00f260;
+      background: linear-gradient(#6d047bf5, #ffffff);
+    }
+
+    h5 {
+      font-family: "Poppins", sans-serif;
+    }
+    th,
+    tr {
+      text-align: center;
+    }
+
+    @media screen and (max-width: 600px) {
+      table {
+        display: block;
+        overflow-x: auto;
       }
-  
-      h6 {
-        text-align: center;
-      }
-  
-      .row {
-        margin: 100px;
-      }
-      #panel2{
-        background: #2f323a;
-      }
-      #panel{
-        border-color: #2f323a;
-      }
-      th, tr {
-        text-align: center;
-      }
-      .panel-heading {
-        color: white;
-        text-align: center;
-        background: #6d047bf5;
-      }
-      .home-section{
-        background: #00F260;
-        background: linear-gradient(#6d047bf5, #ffffff);
-      }
-    </style>  
-  
+    }
+  </style>
 </head>
-<br><br><br>
-    <div class="container">
-        <div class="panel">
-          <div class="panel-heading">
-            <h5 class="panel-title">Estadísticas</h5>
-          </div>
-          <table class="table table-hover" id="dev-table">
-            <thead>
-              <tr>          
-                <th>Partidas jugadas</th>
-                <th>Preguntas respondidas</th>
-                <th>Correctas</th>
-                <th>Puntaje total</th>
-              </tr>
-            </thead>
-            <tr>
-                <td>{{total_partidas}}</td>
-                <td>{{preguntas_totales}}</td>
-                <td> {{correctas}}</td>
-                <td> {{marks}}</td>
-            </tr>
-          </table>
-        </div>
-      </div>
+<br /><br /><br />
+<div class="container">
+  <div class="panel">
+    <div class="panel-heading">
+      <h5 class="panel-title">Estadísticas</h5>
+    </div>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Partidas jugadas</th>
+          <th>Preguntas respondidas</th>
+          <th>Correctas</th>
+          <th>Puntaje total</th>
+        </tr>
+      </thead>
+      <tr>
+        <td>{{total_partidas}}</td>
+        <td>{{preguntas_totales}}</td>
+        <td>{{correctas}}</td>
+        <td>{{marks}}</td>
+      </tr>
+    </table>
+  </div>
+</div>
 {% endblock %}
