--- a/proyectofinal/templates/user/user_exam.html
+++ b/proyectofinal/templates/user/user_exam.html
@@ -7,10 +7,6 @@
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-  {% block title %}
-    <title>Elegir categoría</title>
-  {% endblock %}
-
   <style media="screen">
     a:link {
       text-decoration: none;
@@ -23,17 +19,31 @@
     .row {
       margin: 100px;
     }
-    #panel2{
+
+    #panel2 {
       background: #6d047bf5;
     }
-    #panel{
-      border-color: #fffffff5;
-      color: white; 
+
+    #panel {
+      border-color: #6d047bf5;
+      color: white;
     }
-    .home-section{
-background: #00F260;
-background: linear-gradient(#6d047bf5, #ffffff);
-  }
+
+    .home-section {
+      background: #00F260;
+      background: linear-gradient(#6d047bf5, #ffffff);
+    }
+
+    h6 {
+      font-family: "Poppins", sans-serif;
+    }
+
+    @media screen and (max-width: 600px) {
+      table {
+        display: block;
+        overflow-x: auto;
+      }
+    }
   </style>
 </head>
 
@@ -48,16 +58,17 @@ background: linear-gradient(#6d047bf5, #ffffff);
         <tr>
 
           <th>Nombre de categoría</th>
-          
+
           <th>Jugar</th>
         </tr>
       </thead>
-      {% for c in categories %}
+      {% for t in categories %}
       <tr>
 
-        <td>{{c.category_name}}</td>
-        
-        <td><a class="btn btn-danger btn-xs" href="{% url 'take-exam' c.id  %}"><span class="glyphicon glyphicon-circle-arrow-right"></span></a></td>
+        <td> {{t.category_name}}</td>
+
+        <td><a class="btn btn-danger btn-xs" href="{% url 'take-exam' t.id  %}"><span
+              class="glyphicon glyphicon-circle-arrow-right"></span></a></td>
       </tr>
       {% endfor %}
     </table>
